[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategic_deconfliction"
version = "1.0.0"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "plotly",
  "matplotlib",
  # additional dependencies
]

[tool.setuptools.packages.find]
where = ["src"]
