[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategic_deconfliction"
version = "1.0.0"
dependencies = [
  "numpy>=1.21.0 ",
  "scipy",
  "pandas>=1.3.0",
  "plotly>=5.0.0",
  "matplotlib",
  # additional dependencies
  "certifi >= 2024.7.4",
  "configobj >= 5.0.9",
  "cryptography >= 43.0.1",
  "idna >= 3.7",
  "jinja2 >= 3.1.6",
  "requests >= 2.32.4",
  "twisted >= 24.7.0rc1",
  "urllib3 >= 2.5.0",
  "matplotlib>=3.5.0",
  "ffmpeg",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "flake8",
    "mypy",
    "types-setuptools",
]

[tool.setuptools.packages.find]
where = ["src"]
